# health-dashboard

./: .gitignore  Dockerfile  openhost.toml  pyproject.toml
health_dashboard/src/health_dashboard/: app.py  db.py
health_dashboard/src/health_dashboard/templates/: dashboard.html  heart_rate.html  settings.html  workouts.html
tests/: conftest.py  test_heart_rate_chart.py  test_workouts.py
