[project]
name = "health-dashboard"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "litestar>=2.0",
    "hypercorn>=0.17",
    "httpx>=0.27",
    "health-data-service",
    "aiosqlite>=0.20",
]

[tool.uv.sources]
health-data-service = { git = "https://github.com/imbue-openhost/health-data-service-spec", branch = "main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["health_dashboard/src/health_dashboard"]

[dependency-groups]
dev = [
    "openhost-test-harness @ git+https://github.com/imbue-openhost/openhost-app-test-harness@main",
    "pytest>=8.0",
    "httpx>=0.27",
    "playwright>=1.40",
]
